add style with css before passing to js

--- a/index.html
+++ b/index.html
@@ -8,16 +8,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- header -->
-    <header>
+    <div class="app-wrapper">
 
-    </header>
-    <!-- header -->
-    <!-- main -->
-    <main>
+        <!-- header -->
+        <header>
+            
+        </header>
+        <!-- header -->
+        <!-- main -->
+        <main>
+            <div class="grid-container">
+                <!-- grid-item -->
+                <!-- <div class="grid-item">
+                    <span>1</span>
+                </div> -->
+            </div>
+        </main>
+        <!-- main -->
+        <!-- footer -->
+        <footer>
 
-    </main>
-    <!-- main -->
+        </footer>
+        <!-- footer -->
+
+    </div>
     
 
 
