--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- header -->
         <header>
             
+            <button id="play" >play</button>
         </header>
         <!-- header -->
         <!-- main -->
